[tool.poetry]
name = "app"
version = "0.1.0"
description = "Flask exam app (production-ready on Render)"
authors = ["you"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "^2.3.3"
Flask_SQLAlchemy = "^3.0.5"
boto3 = "^1.28.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
